--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["lru","1000","3"],
+            "args": ["lru","1000","3", "10000"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -30,7 +30,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["secondChance","10","3"],
+            "args": ["secondChance","10","3","10000"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
